namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    name: test
