service.yml
apiVersion: v1
kind: Service
metadata:
  name: gemlight-service
  namespace: sample
spec:
  type: NodePort
  ports:
    - port: 80
#      nodePort:
  selector:
    app: gemlight
