ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gemlight-ingress
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gemlight-service
                port:
                  number: 80
